tests/fixtures/compile-errors/unregistered-type/compile_error.nim
import strformat,options

import ../../../../src/macro-assertions
ErrorBase.UnregisteredType